# XRT

src/platform/zc702_base/: config.sh
src/platform/zc706/: config.sh
src/platform/zcu102_revmin/: config.sh
src/platform/zcu102ng/: config.sh
src/platform/zcu104_revmin/: config.sh
src/platform/zed/: config.sh
src/runtime_src/: CMakeLists.txt
src/runtime_src/core/common/: device.h  query.h  query_requests.h
src/runtime_src/core/edge/: CMakeLists.txt
src/runtime_src/core/edge/common/: memaccess.h
src/runtime_src/core/edge/drm/zocl/: zocl_bo.c  zocl_drv.c  zocl_drv.h
src/runtime_src/core/edge/fragments/: xlnk_dts_fragment_mpsoc.dts  xlnk_dts_fragment_zynq.dts
src/runtime_src/core/edge/include/: zynq_ioctl.h
src/runtime_src/core/edge/tools/xbutil/: xbutil.h
src/runtime_src/core/edge/user/: shim.cpp  shim.h
src/runtime_src/core/pcie/linux/: device_linux.cpp
src/runtime_src/tools/scripts/: peta_build.sh
src/runtime_src/xallocator/: CMakeLists.txt  xallocator.cpp  xlnk-ioctl.h  xlnk-os.h  xlnk-sysdef.h
src/runtime_src/xdp/profile/plugin/aie/: aie_plugin.cpp
src/runtime_src/xdp/profile/plugin/aie_trace/: aie_trace_plugin.cpp
